--- a/native-node/package.json
+++ b/native-node/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node_modules/typescript/bin/tsc && cp public/model.ftz dist/",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js"
   },
   "author": "Maxime Sobrier",
   "license": "ISC",
