--- a/native-node/package.json
+++ b/native-node/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node_modules/typescript/bin/tsc && cp public/model.ftz dist/ && cp src/helpers/classifier/languages.stats.10k.compact.json dist/helpers/classifier/",
-    "package": "npm run build && rm -f web-classification.zip && cd dist && zip ../web-classification.zip -r * -x **/*.map -x *.map && cd ..",
+    "package": "npm run build && rm -f web-classification.zip && cp -r node_modules dist/ && cd dist && zip ../web-classification.zip -r * -x **/*.map -x *.map && cd ..",
     "start": "node dist/index.js"
   },
   "author": "Maxime Sobrier",
