--- a/native-node/package.json
+++ b/native-node/package.json
@@ -5,8 +5,8 @@
   "bin": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node_modules/typescript/bin/tsc && cp public/model.ftz dist/ && cp src/helpers/classifier/languages.stats.10k.compact.json dist/helpers/classifier/",
-    "package": "npm run build && rm -f web-classification.zip && cp -r node_modules dist/ && cd dist && zip ../web-classification.zip -r * -x **/*.map -x *.map && cd ..",
+    "build": "node_modules/typescript/bin/tsc && cp public/model.ftz dist/ && cp src/helpers/classifier/languages.stats.10k.compact.json dist/helpers/classifier/ && cp public/run.bat dist/ && cp public/run.sh",
+    "package": "npm run build && rm -f web-classification.zip && cp -r node_modules dist/ && rm -rf dist/node_modules/fasttext.js/examples/ && cd dist && zip ../web-classification.zip -r * -x **/*.map -x *.map && cd ..",
     "start": "node dist/index.js"
   },
   "author": "Maxime Sobrier",
